# Mandelbrot-cuda

./: .gitignore  CMakeLists.txt  Image.cpp  Image.h  ImageGPU.cu  ImageGPU.h  Main.cpp  Mandelbrot.cu  Mandelbrot.h  mandelbrot.cu  mandelbrot.h
Demo/: CMakeLists.txt  Main.cpp
demo/: CMakeLists.txt  main.cpp
